[gd_scene load_steps=3 format=3 uid="uid://bhruva3trge7r"]

[ext_resource type="Script" path="res://01_global_scenes/menu.gd" id="1_qbbs5"]
[ext_resource type="Texture2D" uid="uid://cpaicsgwupsy3" path="res://00_resource/572496_spacy, space, game, black, galaxy _xl-1024-v1-0.png" id="2_h4iew"]

[node name="Menu" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qbbs5")

[node name="ColorRect" type="TextureRect" parent="."]
modulate = Color(0.402604, 0.402604, 0.402604, 0.533333)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h4iew")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 38.0
offset_right = 1147.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 91
text = "8 in 1"
horizontal_alignment = 1

[node name="Games" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.0
offset_top = -128.0
offset_right = 553.0
offset_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 80
theme_override_constants/v_separation = 50
columns = 2

[node name="ClickGame" type="Button" parent="Games"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "HA○O 9"

[node name="DragGame" type="Button" parent="Games"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "StarCra○t 5"

[node name="ArrowGame" type="Button" parent="Games"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "シェ○ムー7"

[node name="WallGame" type="Button" parent="Games"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "RidgeRac○r 23"

[node name="WaniGame" type="Button" parent="Games"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "ワニ○ニパニック4"

[node name="TimeGame" type="Button" parent="Games"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "ビート○ニア 30"

[node name="DVD" type="Button" parent="Games"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "ムフフDVD"

[node name="Color" type="Button" parent="Games"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "146にんつめあわせ"
